--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/lib/*": ["src/lib/*"]
     }
   },
   "include": ["empty.ts"],
